Fix: adjust the alignment of elements

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
 h1{
     font-size: 50px;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    margin: 30px auto;
+    margin: 25px auto;
 }
 
 .canvas{
@@ -54,22 +54,22 @@ h1{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 30px;
-    margin-bottom: 40px;
+    margin-top: 15px;
+    margin-bottom: 20px;
     gap: 40px;
 }
 
 button{
     font-size: 16px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    padding: 10px 15px;
+    padding: 9px 9px;
     flex: 1 1 auto;
     background-color:rgb(111, 118, 125);
     color: white;
-    box-shadow: 2px 2px rgb(29, 29, 29, 0.6);
+    box-shadow: 1.5px 1.5px rgb(29, 29, 29);
     border-radius: 5px;
 }
 
 button:hover, button:active{
-    background-color: rgb(45, 48, 48);
+    background-color: rgb(45, 48, 48, 0.8);
 }
